--- a/index.html
+++ b/index.html
@@ -207,8 +207,9 @@
 
   <script src="https://cdn.jsdelivr.net/npm/@tsparticles/confetti@3.0.3/tsparticles.confetti.bundle.min.js"
     defer></script>
-  <script src="./js/components/toggle-btn.js"></script>
+  <script src="./js/components/toggle-btn.js" defer></script>
   <script src="./js/main.js" defer></script>
+
 </body>
 
 </html>
